# sbodies

./: .gitignore  CMakeLists.txt
ext/imgui/: imconfig.h
src/: main.cpp  vector.h  world.cpp  world.h
